# Shopee_Case_Study

./: .gitignore  README.md
.github/workflows/: aquila-publish.yml
aquila/: .dockerignore  Dockerfile  README.md  pyproject.toml
aquila/aquila/: config.py
aquila/aquila/agent/: agent.py  helper.py
aquila/aquila/dashboard/: Welcome.py  helper.py
aquila/aquila/dashboard/pages/: 1_Chat.py  2_Upload.py  3_Data.py
aquila/aquila/data/: food_receipts.db
aquila/aquila/tools/: database.py  extract.py  helper.py
aquila/scripts/: init.sh
calyx/: README.md  pyproject.toml  search.ipynb
calyx/calyx/: config.py  logging.py  main.py
calyx/calyx/api/v1/: auth.py  search.py
calyx/calyx/vectordb/: helper.py  vectordb.py
calyx/data/: movie_description.csv
notebook/: Q0_Engineering_Knowledge_AI_Agent_Test.ipynb  Q1_Parse_CSV.ipynb  Q2_Parse_Large_CSV.ipynb  Q3_Different_small_large_csv.ipynb  README.md
